--- a/app/styles/components/post-score.scss
+++ b/app/styles/components/post-score.scss
@@ -1,7 +1,7 @@
-$padding: 0.5em;
+$padding: 1em;
 
 .post-score {
-	width: 4em;
+	// width: 4em;
 	display: flex;
 	flex-direction: column;
 	text-align: center;
