--- a/app/styles/routes/application.scss
+++ b/app/styles/routes/application.scss
@@ -1,5 +1,5 @@
 body {
-	background: $background !important;
+	// background: $background !important;
 	font-size: .875rem !important;
   padding-top: 3.5rem;
 }
