--- a/app/styles/routes/application.scss
+++ b/app/styles/routes/application.scss
@@ -1,7 +1,7 @@
 body {
 	// background: $background !important;
 	font-size: .875rem !important;
-  padding-top: 3.5rem;
+  // padding-top: 3.5rem;
 }
 
 .main {
