--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,18 +4,18 @@
 	<nav class="my-2 my-md-0 mr-auto">
 		<div class="btn-group" role="group">
 			{{#if currentFeed}}
-			<button type="button" class="btn btn-outline-warning">/{{currentFeed}}</button>
-			<button type="button" class="btn btn-outline-warning"><i class="fa fa-caret-down"></i></button>
+				<button type="button" class="btn btn-outline-warning">/{{currentFeed}}</button>
+				<button type="button" class="btn btn-outline-warning"><i class="fa fa-caret-down"></i></button>
 			{{/if}}
 			{{#if currentSubreddit}}
-			<button type="button" class="btn btn-outline-success" {{action "goToSubreddit" currentSubreddit}}>/{{formattedCurrentSubreddit}}</button>
-			<button type="button" class="btn btn-outline-success"><i class="fa fa-caret-down"></i></button>
-			<button type="button" class="btn btn-outline-success"><i class="fa fa-times"></i></button>
-			<button type="button" class="btn btn-outline-success">/hot</button>
+				<button type="button" class="btn btn-outline-success" {{action "goToSubreddit" currentSubreddit}}>/{{formattedCurrentSubreddit}}</button>
+				<button type="button" class="btn btn-outline-success"><i class="fa fa-caret-down"></i></button>
+				<button type="button" class="btn btn-outline-success"><i class="fa fa-times"></i></button>
+				<button type="button" class="btn btn-outline-success">/hot</button>
 			{{/if}}
 			{{#if currentPost}}
-			<button type="button" class="btn btn-outline-info">/{{currentPost}}</button>
-			<button type="button" class="btn btn-outline-info"><i class="fa fa-times"></i></button>
+				<button type="button" class="btn btn-outline-info">/{{currentPost}}</button>
+				<button type="button" class="btn btn-outline-info"><i class="fa fa-times"></i></button>
 			{{/if}}
 		</div>
 	</nav>
@@ -27,54 +27,10 @@
 	</nav>
 	<a class="btn btn-outline-primary" href="#">Sign up</a>
 </div>
-
-<!--style="background-color:RGB(145, 90, 246);"-->
-<!-- <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-light">
-	{{#link-to "index" class="navbar-brand"}}<i class="fa fa-rocket pr-1"></i> {{config "APP.name"}}{{/link-to}}
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	</button>
-	<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		<ul class="navbar-nav ml-2">
-			<li class="nav-item">
-				<div class="btn-group" role="group" aria-label="Basic example">
-					{{#if currentFeed}}
-						<button type="button" class="btn btn-outline-warning">/{{currentFeed}}</button>
-						<button type="button" class="btn btn-outline-warning"><i class="fa fa-caret-down"></i></button>
-					{{/if}}
-					{{#if currentSubreddit}}
-						<button type="button" class="btn btn-outline-success" {{action "goToSubreddit" currentSubreddit}}>/{{formattedCurrentSubreddit}}</button>
-						<button type="button" class="btn btn-outline-success"><i class="fa fa-caret-down"></i></button>
-						<button type="button" class="btn btn-outline-success"><i class="fa fa-times"></i></button>
-						<button type="button" class="btn btn-outline-success">/hot</button>
-					{{/if}}
-					{{#if currentPost}}
-						<button type="button" class="btn btn-outline-info">/{{currentPost}}</button>
-						<button type="button" class="btn btn-outline-info"><i class="fa fa-times"></i></button>
-					{{/if}}
-				</div>
-			</li>
-		</ul>
-		<ul class="navbar-nav ml-auto">
-			<li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					{{authenticatedUser}}
-				</a>
-				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item" href="#">Action</a>
-					<a class="dropdown-item" href="#">Another action</a>
-					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="#">Something else here</a>
-				</div>
-			</li>
-		</ul>
-	</div>
-</nav> -->
-
 <div class="container-fluid">
 	<div class="row">
 		{{#subreddit-list/table model=subreddits onTransition=(action "goToRoute") onSelection=(action "goToSubreddit")}}{{/subreddit-list/table}}
-		<div class="main col-10">
+		<div class="col-10">
 			{{outlet}}
 		</div>
 	</div>
