--- a/app/styles/components/scroll-container.scss
+++ b/app/styles/components/scroll-container.scss
@@ -1,5 +1,5 @@
 .scroll-container {
-	height: calc(100vh - 56px);
+	height: calc(100vh - #{$navbar-height});
 	padding: 1em;
 	padding-left: 0;
 	overflow-x: hidden;
