--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -20,12 +20,12 @@
 		</div>
 	</nav>
 	<nav class="my-2 my-md-0 mr-md-3">
-		<a class="p-2 text-dark" href="#">Features</a>
-		<a class="p-2 text-dark" href="#">Enterprise</a>
-		<a class="p-2 text-dark" href="#">Support</a>
-		<a class="p-2 text-dark" href="#">Pricing</a>
+		<a class="p-2 text-dark" href="#">Moderation</a>
+		<a class="p-2 text-dark" href="#">Chat</a>
+		<a class="p-2 text-dark" href="#">Messages</a>
+		<a class="p-2 text-dark" href="#">Create Post</a>
 	</nav>
-	<a class="btn btn-outline-primary" href="#">Sign up</a>
+	<a class="btn btn-outline-primary" href="#">{{authenticatedUser}}</a>
 </div>
 <div class="container-fluid">
 	<div class="row">
