--- a/app/templates/subreddit.hbs
+++ b/app/templates/subreddit.hbs
@@ -6,19 +6,19 @@
 	</div>
 	{{#unless currentPost}}
 		<div class="col-3 pl-0 ml-0">
-			<Panel>
-				{{#unless currentPost}}
-					<Sidebar>
-						Subreddit
-						<!-- <h4>r/{{model.display_name}}</h4>
-						<h5>Subscribers: {{model.subscribers}}</h5>
-						<h5>Online: {{model.active_user_count}}</h5>
-						<p>{{model.public_description}}</p> -->
-					</Sidebar>
-				{{else}}
-					{{outlet}}
-				{{/unless}}
-			</Panel>
+			<ScrollContainer>
+				<Panel>
+					{{#unless currentPost}}
+						<!-- <Sidebar></Sidebar> -->
+						<h4>r/{{!model.display_name}}</h4>
+						<h6>Subscribers: {{!model.subscribers}}</h6>
+						<h6>Online: {{!model.active_user_count}}</h6>
+						<p>{{!model.public_description}}</p>
+					{{else}}
+						{{outlet}}
+					{{/unless}}
+				</Panel>
+			</ScrollContainer>
 		</div>
 	{{else}}
 		<div class="col-8 px-0 mx-0">
