--- a/app/templates/subreddit.hbs
+++ b/app/templates/subreddit.hbs
@@ -5,7 +5,7 @@
 		</ScrollContainer>
 	</div>
 	{{#unless currentPost}}
-		<div class="col-3 pl-0 ml-0">
+		<div class="col-3 pl-0">
 			<ScrollContainer>
 				<Panel>
 					{{#unless currentPost}}
@@ -21,7 +21,7 @@
 			</ScrollContainer>
 		</div>
 	{{else}}
-		<div class="col-8 px-0 mx-0">
+		<div class="col-8 px-0">
 			<ScrollContainer>
 				<Panel>
 					{{outlet}}
