--- a/app/templates/feed-loading.hbs
+++ b/app/templates/feed-loading.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col-9">
+	<div class="col-9 pr-0">
 		<Panel class="p-3">
 			{{#content-placeholders as |placeholder|}}
 				{{placeholder.heading img=true}}
@@ -17,7 +17,7 @@
 			{{/content-placeholders}}
 		</Panel>
 	</div>
-	<div class="col-3 pl-0 ml-0">
+	<div class="col-3 px-0">
 		<Panel class="p-3">
 			{{#content-placeholders as |placeholder|}}
 				{{placeholder.heading img=true}}
