--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -1,3 +1,7 @@
+$background-color: #f8f9fa;
+$foreground-color: white;
+
+
 $background: rgb(219, 224, 229);
 $background-light: white;
 $progress-color: rgb(72, 165, 112);
