--- a/app/styles/routes/application.scss
+++ b/app/styles/routes/application.scss
@@ -1,4 +1,17 @@
 body {
-	// background: $background !important;
+	background-color: $background-color !important;
 	font-size: .875rem !important;
+}
+
+
+.col-1-5 {
+	// @include make-col(1.5);
+	// @extend .col-2;
+	max-width: 12.5%;
+}
+
+.col-10-5 {
+	// @include make-col(10.5);
+	// @extend .col-10;
+	max-width: 87.4999999997%;
 }
