--- a/app/styles/components/subreddit-list.scss
+++ b/app/styles/components/subreddit-list.scss
@@ -1,6 +1,10 @@
 .subreddit-list {
-	background: $background-light;
+	height: calc(100vh - #{$navbar-height});
+	overflow-x: hidden;
+	overflow-y: auto;
 	padding-top: 1em;
+	background-color: $foreground-color;
+	border-right: 1px solid $line-color;
 	
 	.subreddit {
 		display: flex;
@@ -15,71 +19,30 @@
 		}
 	}
 	
+	.sidebar-heading {
+		font-size: .75rem;
+		text-transform: uppercase;
+	}
 	
-	
-	
-}
-
-/*
- * Sidebar STUFF
- */
-
-.feather {
-  width: 16px;
-  height: 16px;
-  vertical-align: text-bottom;
-}
-
-/*
- * Sidebar
- */
-
-.sidebar {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 100; /* Behind the navbar */
-  padding: 48px 0 0; /* Height of navbar */
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
-}
-
-.sidebar-sticky {
-  position: relative;
-  top: 0;
-  height: calc(100vh - #{$navbar-height});
-  // padding-top: .5rem;
-  overflow-x: hidden;
-  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-}
-
-@supports ((position: -webkit-sticky) or (position: sticky)) {
-  .sidebar-sticky {
-    position: -webkit-sticky;
-    position: sticky;
-  }
-}
-
-.sidebar .nav-link {
-  font-weight: 500;
-  color: #333;
-}
-
-.sidebar .nav-link .feather {
-  margin-right: 4px;
-  color: #999;
-}
-
-.sidebar .nav-link.active {
-  color: #007bff;
-}
-
-.sidebar .nav-link:hover .feather,
-.sidebar .nav-link.active .feather {
-  color: inherit;
-}
-
-.sidebar-heading {
-  font-size: .75rem;
-  text-transform: uppercase;
+	.nav-link {
+		font-weight: 500;
+		color: #333;
+		&:active { color: #007bff; }
+		
+		.feather {
+			margin-right: 4px;
+			color: #999;
+		}
+		
+		&:hover .feather,
+		&:active .feather  {
+			color: inherit;
+		}
+		
+		.feather {
+			width: 16px;
+			height: 16px;
+			vertical-align: text-bottom;
+		}
+	}
 }
