--- a/app/styles/routes/subreddit/post.scss
+++ b/app/styles/routes/subreddit/post.scss
@@ -1,5 +1,5 @@
 .subreddit-post {
-	padding-left: 1em;
+	padding: 1em;
 	// padding: 1em;
 	// border-radius: 0.3em;
 	// background: $background-light;
