--- a/app/templates/components/post.hbs
+++ b/app/templates/components/post.hbs
@@ -14,7 +14,7 @@
 	<h6>
 		<a href="#" class="text-dark" {{action onSelection}}>{{model.title}}</a>
 		{{#unless model.is_self}}
-			<small><a href={{model.url}} target="_blank" rel="noopener">{{url-helper model.url}}</a></small>
+			<small><a href={{model.url}} target="_blank" rel="noopener">{{url model.url}}</a></small>
 		{{/unless}}
 		{{!-- <span class="badge badge-secondary">{{model}}</span> --}}
 	</h6>
