--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -1,10 +1,9 @@
 $background-color: #f8f9fa;
 $foreground-color: white;
+$progress-color: rgb(145, 90, 246);
 
-
-$background: rgb(219, 224, 229);
-$background-light: white;
-$progress-color: rgb(72, 165, 112);
+// $background: rgb(219, 224, 229);
+// $background-light: white;
 
 $context-color: rgb(120, 124, 126);
 $line-color: rgb(206, 212, 218);
