--- a/app/templates/feed/loading.hbs
+++ b/app/templates/feed/loading.hbs
@@ -1,4 +1,4 @@
-<Panel class="p-3">
+<div class="p-3">
 	{{#content-placeholders as |placeholder|}}
 		{{placeholder.heading img=true}}
 		{{placeholder.text lines=2}}
@@ -13,4 +13,4 @@
 		{{placeholder.heading img=true}}
 		{{placeholder.text lines=2}}
 	{{/content-placeholders}}
-</Panel>
+</div>
