--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,17 +1,17 @@
 {{notification-container position="bottom-left"}}
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-white border-bottom shadow-sm">
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-white border-bottom shadow-sm" style="-webkit-app-region:drag; position:relative; z-index:50;">
 	<h5 class="my-0 mr-4 font-weight-normal">{{#link-to "index" class="text-dark"}}<i class="fa fa-rocket pr-1"></i> {{config "APP.name"}}{{/link-to}}</h5>
 	<nav class="my-2 my-md-0 mr-auto">
 		<div class="btn-group" role="group">
 			{{#if currentFeed}}
-				<button type="button" class="btn btn-outline-warning">/{{currentFeed}}</button>
-				<button type="button" class="btn btn-outline-warning"><i class="fa fa-caret-down"></i></button>
+				<button type="button" class="btn btn-outline-primary">/{{currentFeed}}</button>
+				<button type="button" class="btn btn-outline-primary"><i class="fa fa-caret-down"></i></button>
 			{{/if}}
 			{{#if currentSubreddit}}
-				<button type="button" class="btn btn-outline-success" {{action "goToSubreddit" currentSubreddit}}>/{{formattedCurrentSubreddit}}</button>
-				<button type="button" class="btn btn-outline-success"><i class="fa fa-caret-down"></i></button>
-				<button type="button" class="btn btn-outline-success"><i class="fa fa-times"></i></button>
-				<button type="button" class="btn btn-outline-success">/hot</button>
+				<button type="button" class="btn btn-outline-primary" {{action "goToSubreddit" currentSubreddit}}>/{{formattedCurrentSubreddit}}</button>
+				<button type="button" class="btn btn-outline-primary"><i class="fa fa-caret-down"></i></button>
+				<button type="button" class="btn btn-outline-primary"><i class="fa fa-times"></i></button>
+				<button type="button" class="btn btn-outline-primary">/hot</button>
 			{{/if}}
 			{{#if currentPost}}
 				<button type="button" class="btn btn-outline-info">/{{currentPost}}</button>
