--- a/app/templates/feed.hbs
+++ b/app/templates/feed.hbs
@@ -6,7 +6,9 @@
 	</div>
 	<div class="col-3 px-0">
 		<ScrollContainer>
-			Feed Sidebar
+			<Sidebar>
+				Feed
+			</Sidebar>
 		</ScrollContainer>
 	</div>
 </div>
