--- a/app/templates/subreddit-loading.hbs
+++ b/app/templates/subreddit-loading.hbs
@@ -13,11 +13,13 @@
 		</ScrollContainer>
 	</div>
 	<div class="col-3 px-0">
-		<ScrollContainer class="p-3">
-			{{#content-placeholders as |placeholder|}}
-				{{placeholder.heading img=true}}
-				{{placeholder.text lines=3}}
-			{{/content-placeholders}}
+		<ScrollContainer>
+			<Sidebar>
+				{{#content-placeholders as |placeholder|}}
+					{{placeholder.heading img=true}}
+					{{placeholder.text lines=3}}
+				{{/content-placeholders}}
+			</Sidebar>
 		</ScrollContainer>
 	</div>
 </div>
