--- a/app/templates/components/post.hbs
+++ b/app/templates/components/post.hbs
@@ -16,7 +16,7 @@
 		{{#unless model.is_self}}
 			<small><a href={{model.url}} target="_blank" rel="noopener">{{url model.url}}</a></small>
 		{{/unless}}
-		<span class="badge badge-secondary">{{model}}</span>
+		<span class="badge badge-secondary">{{model.link_flair_text}}</span>
 	</h6>
 	<p class="mb-2">
 		{{#link-to "subreddit" (subcleaner model.subreddit_name_prefixed)}}{{model.subreddit_name_prefixed}}{{/link-to}}
