--- a/app/templates/feed.hbs
+++ b/app/templates/feed.hbs
@@ -7,7 +7,7 @@
 	<div class="col-3 px-0">
 		<ScrollContainer>
 			<Sidebar>
-				Feed
+				<h4>r/{{currentFeed}}</h4>
 			</Sidebar>
 		</ScrollContainer>
 	</div>
