--- a/app/templates/subreddit.hbs
+++ b/app/templates/subreddit.hbs
@@ -1,13 +1,13 @@
 <div class="row">
-	<div class="{{unless currentPost "col-9" "col-4"}} px-0">
+	<div class="{{unless applicationController.currentPost "col-9" "col-4"}} px-0">
 		<ScrollContainer>
-			<Posts @model={{model}} @active={{currentPost}} @onSelection={{action "goToPost"}} />
+			<Posts @model={{model}} @active={{applicationController.currentPost}} @onSelection={{action "goToPost"}} />
 		</ScrollContainer>
 	</div>
-	{{#unless currentPost}}
+	{{#unless applicationController.currentPost}}
 		<div class="col-3 pl-0">
 			<ScrollContainer>
-				{{#unless currentPost}}
+				{{#unless applicationController.currentPost}}
 					<Sidebar>
 						<h4>r/{{!model.display_name}}</h4>
 						<h6>Subscribers: {{!model.subscribers}}</h6>
