--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -3,8 +3,6 @@ $background-color: #f8f9fa;
 $foreground-color: white;
 $progress-color: $theme-color;
 
-// $background: rgb(219, 224, 229);
-// $background-light: white;
-
 $context-color: rgb(120, 124, 126);
 $line-color: rgb(206, 212, 218);
+$selected-post-color: rgb(238, 238, 238);
