--- a/app/styles/components/scroll-container.scss
+++ b/app/styles/components/scroll-container.scss
@@ -5,4 +5,5 @@
 	margin-left: 1em;
 	background-color: $foreground-color;
 	border-left: 1px solid $line-color;
+	border-right: 1px solid $line-color;
 }
