--- a/app/templates/subreddit.hbs
+++ b/app/templates/subreddit.hbs
@@ -5,7 +5,7 @@
 		</ScrollContainer>
 	</div>
 	{{#unless parent.currentPost}}
-		<div class="col-3 pl-0">
+		<div class="col-3 px-0">
 			<ScrollContainer>
 				{{#unless parent.currentPost}}
 					<Sidebar>
