--- a/app/styles/overrides.scss
+++ b/app/styles/overrides.scss
@@ -1,5 +1,3 @@
-// font
-
 // nprogress
 
 #nprogress {
@@ -20,20 +18,23 @@
 
 // buttons
 
-.btn-primary{color:#fff;background-color:$theme-color;border-color:$theme-color}
+.btn-primary {
+	color: #fff;
+	background-color: $theme-color;
+	border-color: $theme-color
+}
+.btn-outline-primary {
+	color: $theme-color !important;
+	background-color: transparent !important;
+	background-image: none !important;
+	border-color: $theme-color !important;
+}
 
 .btn-primary:hover{color:#fff;background-color:$theme-color;border-color:$theme-color}
 .btn-primary:focus,.btn-primary.focus{box-shadow:0 0 0 .2rem rgba(0,90,90,0.5)}
 .btn-primary.disabled,.btn-primary:disabled{color:#fff;background-color:$theme-color;border-color:$theme-color}
 .btn-primary:not(:disabled):not(.disabled):active,.btn-primary:not(:disabled):not(.disabled).active,.show>.btn-primary.dropdown-toggle{color:#fff;background-color:$theme-color;border-color:#000}
 .btn-primary:not(:disabled):not(.disabled):active:focus,.btn-primary:not(:disabled):not(.disabled).active:focus,.show>.btn-primary.dropdown-toggle:focus{box-shadow:0 0 0 .2rem rgba(0,90,90,0.5)}
-
-.btn-outline-primary {
-	color:$theme-color !important;
-	background-color:transparent !important;
-	background-image:none !important;
-	border-color:$theme-color !important;
-}
 
 .btn-outline-primary:hover{color:#222;background-color:$theme-color;border-color:$theme-color}
 .btn-outline-primary:focus,.btn-outline-primary.focus{box-shadow:0 0 0 .2rem $theme-color}
