--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -1,8 +1,9 @@
-$theme-color: rgb(145, 90, 246);
+$primary-color: rgb(145, 90, 246);
 $background-color: #f8f9fa;
 $foreground-color: white;
-$progress-color: $theme-color;
+$progress-color: $primary-color;
 
+$subreddit-list-text-color: #333;
 $context-color: rgb(120, 124, 126);
 $line-color: rgb(206, 212, 218);
 $selected-post-color: rgb(238, 238, 238);
