--- a/app/templates/components/subreddit-list/group.hbs
+++ b/app/templates/components/subreddit-list/group.hbs
@@ -29,9 +29,9 @@
 	
 	{{#each model as |subreddit| }}
 		<li class="nav-item" {{action onSelection subreddit.display_name}}>
-			<a class="nav-link" href="#">
-				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
-				r/{{subreddit.display_name}}
+			<a class="nav-link {{if active "active"}}" href="#">
+				<img src={{if subreddit.icon_img subreddit.icon_img "https://via.placeholder.com/24"}} class="rounded-circle">
+				{{subreddit.display_name_prefixed}}
 			</a>
 		</li>
 	{{/each}}
