--- a/app/styles/components/scroll-container.scss
+++ b/app/styles/components/scroll-container.scss
@@ -1,9 +1,14 @@
 .scroll-container {
-	height: calc(100vh - #{$navbar-height});
-	overflow-x: hidden;
-	overflow-y: auto;
-	margin-left: 1em;
-	background-color: $foreground-color;
-	border-left: 1px solid $line-color;
-	border-right: 1px solid $line-color;
+	
+	
+	.inner-container {
+		background-color: $foreground-color;
+		border-left: 1px solid $line-color;
+		border-right: 1px solid $line-color;
+		
+		height: calc(100vh - 101px);
+		overflow-x: hidden;
+		overflow-y: auto;
+		margin-left: 1em;
+	}
 }
