--- a/app/templates/components/scroll-container.hbs
+++ b/app/templates/components/scroll-container.hbs
@@ -1,1 +1,22 @@
-{{yield}}
+<!-- <div class="p-3">
+	<button type="button" class="btn btn-outline-primary"><i class="fa fa-times"></i></button>
+	<button type="button" class="btn btn-outline-primary">r/apple</button>
+</div> -->
+
+
+<div class="d-flex flex-column flex-md-row align-items-center p-3 py-2 bg-white border-bottom shadow-sm">
+	<nav>
+		<div class="btn-group btn-group-sm" role="group">
+			<button type="button" class="btn btn-outline-primary"><i class="fa fa-times"></i></button>
+			<button type="button" class="btn btn-outline-primary">r/apple</button>
+		</div>
+		<button type="button" class="btn btn-sm btn-outline-primary">/hot</button>
+	</nav>
+</div>
+
+
+
+
+<div class="inner-container">
+	{{yield}}
+</div>
