Added element styles dir

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,6 +4,7 @@ $navbar-height: 71px;
 @import "overrides";
 
 @import "components/_all";
+@import "elements/_all";
 @import "routes/_all";
 
 @import "ember-content-placeholders";
