--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-white border-bottom" style="-webkit-app-region:drag; position:relative; z-index:50;">
+<div class="d-flex flex-column flex-md-row align-items-center px-3 py-2 bg-white border-bottom shadow-sm" style="-webkit-app-region:drag; position:relative; z-index:50;">
 	<h5 class="my-0 mr-4 font-weight-normal">{{#link-to "index" class="text-dark"}}<i class="fa fa-rocket pr-1"></i> {{config "APP.name"}}{{/link-to}}</h5>
 	<nav class="mr-4">
 		<div class="btn-group" role="group">
