--- a/app/templates/subreddit.hbs
+++ b/app/templates/subreddit.hbs
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="route-subreddit row">
 	<div class="{{unless parent.currentPost "col-9" "col-4"}} px-0">
 		<div class="panel">
 			<div class="d-flex flex-column flex-md-row align-items-center p-2 bg-white border-bottom">
