--- a/app/templates/subreddit/post.hbs
+++ b/app/templates/subreddit/post.hbs
@@ -1,3 +1,12 @@
+<div class="d-flex flex-column flex-md-row align-items-center p-2 bg-white border-bottom">
+	<nav>
+		<div class="btn-group btn-group-sm" role="group">
+			<button type="button" class="btn btn-outline-primary"><i class="fa fa-times"></i></button>
+			<button type="button" class="btn btn-outline-primary">r/apple</button>
+		</div>
+		<button type="button" class="btn btn-sm btn-outline-primary">/hot</button>
+	</nav>
+</div>
 <div class="subreddit-post">
 	<section class="header">
 		<PostScore @model={{model}} />
