--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -42,5 +42,5 @@
 {{notification-container position="bottom-left"}}
 
 {{!-- modals --}}
-{{#modals/welcome isVisible=true}}{{/modals/welcome}}
+{{#modals/welcome-comp}}{{/modals/welcome-comp}}
 {{#modals/login isVisible=false}}{{/modals/login}}
