--- a/app/templates/components/modals/welcome.hbs
+++ b/app/templates/components/modals/welcome.hbs
@@ -1,4 +1,7 @@
-HERE
+<Modal @title={{Welcome to (config "APP.name")!}} @confirmTitle="Okay">
+	<p>Modal body text goes here.</p>
+</Modal>
+
 <div class="modal" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
