--- a/app/templates/subreddit.hbs
+++ b/app/templates/subreddit.hbs
@@ -24,8 +24,8 @@
 			<ScrollContainer class="panel p-3">
 				{{#unless parent.currentPost}}
 					<h4>r/{{subredditInfo.display_name}}</h4>
-					<h6>Subscribers: {{subredditInfo.subscribers}}</h6>
-					<h6>Online: {{subredditInfo.active_user_count}}</h6>
+					<h6>Subscribers: {{number subredditInfo.subscribers}}</h6>
+					<h6>Online: {{number subredditInfo.active_user_count}}</h6>
 					<p>{{subredditInfo.public_description}}</p>
 					<button type="button" class="btn btn-block btn-outline-primary">Subscribe</button>
 					<button type="button" class="btn btn-block btn-outline-primary">Create Post</button>
