--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -1,15 +1,18 @@
 <div class="row">
-	<div class="col-9">
-		<h4>u/{{model.submissions}}</h4>
-		<hr>
-		
-		<h5>Posts</h5>
-		<Posts @model={{model}} @onSelection={{action "goToPost"}} />
-		
-		<h5>Comments</h5>
-		{{!-- {{#each model as |submission|}}
-			<p>{{submission.title}}</p>
-		{{/each}} --}}
+	<div class="col-9 px-0">
+		<ScrollContainer class="panel">
+			<h4>u/{{username}}</h4>
+			<h5>Posts</h5>
+			<Posts @model={{model}} @active=null @onSelection={{action "goToPost"}} />
+			{{#each model as |submission|}}
+				<p>{{submission.title}}</p>
+			{{/each}}
+			
+			
+			<!-- <Posts @model={{model}} @onSelection={{action "goToPost"}} /> -->
+			
+			<h5>Comments</h5>
+		</ScrollContainer>
 	</div>
 	<div class="col-3">
 		<Sidebar>
