--- a/app/templates/feed.hbs
+++ b/app/templates/feed.hbs
@@ -1,6 +1,15 @@
 <div class="row">
 	<div class="col-9 px-0">
 		<ScrollContainer class="panel">
+			<div class="d-flex flex-column flex-md-row align-items-center p-2 bg-white border-bottom">
+				<nav>
+					<div class="btn-group btn-group-sm" role="group">
+						<button type="button" class="btn btn-outline-primary"><i class="fa fa-times"></i></button>
+						<button type="button" class="btn btn-outline-primary">r/apple</button>
+					</div>
+					<button type="button" class="btn btn-sm btn-outline-primary">/hot</button>
+				</nav>
+			</div>
 			{{outlet}}
 		</ScrollContainer>
 	</div>
