--- a/app/templates/feed.hbs
+++ b/app/templates/feed.hbs
@@ -15,7 +15,7 @@
 	</div>
 	<div class="col-3 px-0">
 		<ScrollContainer class="panel p-3">
-			<h4>/{{currentFeed}}</h4>
+			<h4>/{{parent.currentFeed}}</h4>
 		</ScrollContainer>
 	</div>
 </div>
